add css class in latest news

--- a/css/latest-news.css
+++ b/css/latest-news.css
@@ -1,3 +1,14 @@
+.latest-news {
+    display: block;
+    box-sizing: border-box;
+    padding-top: 90px;
+    padding-bottom: 90px;
+    min-width: 320px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .latest-news__title {
     font-family: 'Montserrat', sans-serif;
     position: relative;
