--- a/partials/schedule.partial.html
+++ b/partials/schedule.partial.html
@@ -8,38 +8,38 @@
         </tr>
         <tr class="schedule__row">
             <td class="schedule__data">Mon - Fri</td>
-            <td class="schedule__data">7:00am - 9:00am</td>
-            <td class="schedule__data">Colin's Cuts</td>
+            <td class="schedule__time">7:00am - 9:00am</td>
+            <td class="schedule__program">Colin's Cuts</td>
         </tr>
         <tr class="schedule__row">
             <td class="schedule__data">Mon - Fri</td>
-            <td class="schedule__data">9:00am - 11:00am</td>
-            <td class="schedule__data">Emporium of Delights</td>
+            <td class="schedule__time">9:00am - 11:00am</td>
+            <td class="schedule__program">Emporium of Delights</td>
         </tr>
         <tr class="schedule__row">
             <td class="schedule__data">Mon - Fri</td>
-            <td class="schedule__data">11:00am - 1:00pm</td>
-            <td class="schedule__data">The Sound Lab Show</td>
+            <td class="schedule__time">11:00am - 1:00pm</td>
+            <td class="schedule__program">The Sound Lab Show</td>
         </tr>
         <tr class="schedule__row">
             <td class="schedule__data">Mon - Fri</td>
-            <td class="schedule__data">1:00pm - 3:00pm</td>
-            <td class="schedule__data">Throwdown Show</td>
+            <td class="schedule__time">1:00pm - 3:00pm</td>
+            <td class="schedule__program">Throwdown Show</td>
         </tr>
         <tr class="schedule__row">
             <td class="schedule__data">Mon - Fri</td>
-            <td class="schedule__data">3:00pm - 5:00pm</td>
-            <td class="schedule__data">Vintage Remix Show</td>
+            <td class="schedule__time">3:00pm - 5:00pm</td>
+            <td class="schedule__program">Vintage Remix Show</td>
         </tr>
         <tr class="schedule__row">
             <td class="schedule__data">Mon - Fri</td>
-            <td class="schedule__data">5:00pm - 7:00pm</td>
-            <td class="schedule__data">Dub You Sexy</td>
+            <td class="schedule__time">5:00pm - 7:00pm</td>
+            <td class="schedule__program">Dub You Sexy</td>
         </tr>
         <tr class="schedule__row">
             <td class="schedule__data">Mon - Fri</td>
-            <td class="schedule__data">7:00pm - 9:00pm</td>
-            <td class="schedule__data">Groove Motion Radio Show</td>
+            <td class="schedule__time">7:00pm - 9:00pm</td>
+            <td class="schedule__program">Groove Motion Radio Show</td>
         </tr>
     </table>
 </section>
