--- a/css/latest-news.css
+++ b/css/latest-news.css
@@ -3,10 +3,6 @@
     box-sizing: border-box;
     padding-top: 90px;
     padding-bottom: 90px;
-    min-width: 320px;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
 }
 
 .latest-news__title {
@@ -19,54 +15,70 @@
     padding: 0;
 }
 
-.overlay__details {
+@media (min-width: 770px) {
+    .latest-news__cards {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto;
+        gap: 20px;
+        margin-top: 30px;
+    }
+}
+
+@media (min-width: 1000px) {
+    .latest-news__cards {
+        display: grid;
+        grid-template-columns:  1fr  auto;
+        grid-template-rows: auto 1fr;
+    }
+}
+.latest-news__card {
     background-color: var(--ui-dark-shade-color);
-    box-sizing: border-box;
+    border-bottom-color: var(--ui-light-shade-color);
+    border-radius: 5px;
     padding: 20px;
-    position: relative;
-    word-wrap: break-word;
-    bottom: 0;
-    width: 100%;
-}
-
-.overlay__title {
-    box-sizing: border-box;
-    display: block;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 28px;
-    text-align: left;
-    color: var(--second-hover-color);
-    word-wrap: break-word;
-}
-
-.overlay__text {
-    box-sizing: border-box;
-    display: block;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 22px;
-    font-weight: 600;
-    line-height: 30.8px;
-    text-align: left;
-    color: var(--ui-dark-accent-color);
-    word-wrap: break-word;
-}
-
-.latest-news__button-link {
-    background-color: var(--second-hover-color);
-    color: var(--ui-dark-accent-color);
-    border-radius: 28px ;
-    padding: 10px 20px;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 12px;
-    text-decoration: none;
+    color: var(--ui-light-shade-color);
     text-align: center;
-    cursor: pointer;
-    box-sizing: border-box;
-    display: inline-block;
 }
 
-.latest-news__button-link:hover {
-    background-color: var(--first-hover-color);
+.latest-news__card .card__image {
+    width: 720px;
+    height: 369px;
+    object-fit: cover;
+    min-height: 140px;
+}
+
+.latest-news__card .card__title {
+    padding: 10px 0px;
+    margin-top: 15px;
+    color: var(--second-hover-color);
+    text-align: left;
+}
+
+.latest-news__card  .card__text {
+    padding: 10px 0px;
+    color: var(--ui-light-shade-color);
+    text-align: left;
+}
+
+.latest-news__button-container .latest-news__button-link {
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    text-align: center;
+    text-decoration: none;
+    position: relative;
+    max-width: 100%;
+    cursor: pointer;
+    color: var(--second-hover-color);
+    font-weight: 500;
+    border-radius: 28px;
+    padding: 5px 15px;
+}
+
+.latest-news-button-link:hover {
+    text-decoration-color: var(--brend-color-gradient);
 }
