--- a/partials/shows.partial.html
+++ b/partials/shows.partial.html
@@ -1,8 +1,8 @@
 <section class="shows">
-    <h2 class="shows__title">
+    <h2 class="shows__title container">
         Shows
     </h2>
-    <div class="shows__cards">
+    <div class="shows__cards container">
         <article class="shows__carts-item shows-card">
             <img src="img/shows/cassette.jpg" alt="Cassette" class="shows__card-image">
             <h3 class="shows__card-title">InDigitNess Voice</h3>
