--- a/partials/why-choose-us.partial.html
+++ b/partials/why-choose-us.partial.html
@@ -1,30 +1,30 @@
-<section class="whu-choose-us">
-    <h2 class="whu-choose-us__title container">
+<section class="why-choose-us">
+    <h2 class="why-choose-us__title container">
         Why Choose Us
     </h2>
-    <div class="whu-choose-us__cards container">
-        <article class="whu-choose-us__carts-item whu-choose-us-card">
-            <img src="img/whu-choose-us/cassette.jpg" alt="Cassette" class="card__image">
+    <div class="why-choose-us__cards container">
+        <article class="whu-choose-us__carts-item why-choose-us-card">
+            <img src="img/why-choose-us/cassette.jpg" alt="Cassette" class="card__image">
             <h3 class="card__title">InDigitNess Voice</h3>
             <p class="card__text">The program goal is to entertain, inform, educate, & involve ...</p>
         </article>
-        <article class="whu-choose-us__carts-item whu-choose-us-card">
-            <img src="img/whu-choose-us/man-headphones.jpg" alt="A man in white headphones" class="card__image">
+        <article class="why-choose-us__carts-item why-choose-us-card">
+            <img src="img/why-choose-us/man-headphones.jpg" alt="A man in white headphones" class="card__image">
             <h3 class="card__title">Afropop Worldwide</h3>
             <p class="card__text">Afropop Worldwide is a first-rate radio program devoted to ...</p>
         </article>
-        <article class="whu-choose-us__carts-item whu-choose-us-card">
-            <img src="img/whu-choose-us/volume-controller.jpg" alt="Volume controller" class="card__image">
+        <article class="why-choose-us__carts-item why-choose-us-card">
+            <img src="img/why-choose-us/volume-controller.jpg" alt="Volume controller" class="card__image">
             <h3 class="card__title">Bella's SoulFRESH</h3>
             <p class="card__text">DJ Bella draws in the audience with new format music ...</p>
         </article>
-        <article class="whu-choose-us__carts-item whu-choose-us-card">
-            <img src="img/whu-choose-us/chameleon.jpg" alt="Chameleon" class="card__image">
+        <article class="why-choose-us__carts-item why-choose-us-card">
+            <img src="img/why-choose-us/chameleon.jpg" alt="Chameleon" class="card__image">
             <h3 class="card__title">Funky Boombox</h3>
             <p class="card__text">The Funky Boombox is on air from 10pm to 12am every Friday.</p>
         </article>
     </div>
-    <div class="whu-choose-us-button-container">
+    <div class="why-choose-us-button-container">
         <a href="#" class="why-choose-us__link">See All Programs</a>
     </div>
 
