redact css careers and win

--- a/partials/careers.partial.html
+++ b/partials/careers.partial.html
@@ -1,6 +1,6 @@
 <section class="career">
     <div class="career__logo"></div>
-    <div class="career__content container">
+    <div class="career__content">
         <p class="career__intro container">
             CAREERS
         </p>
