--- a/css/win.css
+++ b/css/win.css
@@ -5,41 +5,48 @@
     position: relative;
     padding: 90px 0 100px;
 }
+
 .prize__logo {
    display: inline-block;
 }
+
 .prize__advert{
    margin: 0 22.5px;
    padding: 0 40px;
 }
+
 .prize__title {
     font: 38px 'Montserrat', sans-serif;
     margin-bottom: 10px;
-    color: white;
+    color: var(--ui-light-shade-color);
 }
+
 .prize__info {
     font: 16px 'Montserrat', sans-serif;
     line-height: 1.6;
-    color: #838383;
+    color: var(--ui-dark-accent-color);
     margin-bottom: 10px;
 }
+
 .prize__button {
     font: 12px 'Montserrat', sans-serif;
     padding: 12px 24px;
     margin: -5px;
-    color: white;
+    color: var(--ui-light-shade-color);
     text-decoration: none;
     border-radius: 28px;
     display: inline-block;
     cursor: pointer;
-    border: 1px solid white;
+    border: 1px solid var(--ui-light-shade-color);
     transition: background-color 0.3s, color 0.3s;
 }
+
 .prize__button:hover {
-    background-color: white;
-    color: #838383;
+    background-color: var(--ui-light-shade-color);
+    color: var(--ui-dark-accent-color);
 }
-@media (min-width: 767px) {
+
+@media (min-width: 768px) {
     .prize__advert {
         width: 50%;
     }
