--- a/css/why-choose-us.css
+++ b/css/why-choose-us.css
@@ -14,8 +14,8 @@
     .why-choose-us__cards {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
-        margin-top: 30px;
+        gap: 0;
+        margin-top: 20px;
     }
 }
 
@@ -23,15 +23,15 @@
     background-color: var(--ui-dark-shade-color);
     border-bottom-color: var(--ui-light-shade-color);
     border-radius: 5px;
-    padding: 20px;
+    padding: 15px;
     color: var(--ui-light-shade-color);
     text-align: center;
 }
 
-.why-choose-us .card__image {
+.why-choose-us-card__image {
     object-position: 50% 0%;
-    width: 720px;
-    height: 369px;
+    width: auto;
+    height: auto;
     object-fit: cover;
     min-height: 140px;
 }
