--- a/partials/shows.partial.html
+++ b/partials/shows.partial.html
@@ -4,32 +4,32 @@
     </h2>
     <div class="shows__cards container">
         <article class="shows__carts-item shows-card">
-            <img src="img/shows/cassette.jpg" alt="Cassette" class="shows__card-image">
+            <img src="img/shows/cassette.jpg" alt="Cassette" class="shows-card__image">
             <h3 class="shows__card-title">InDigitNess Voice</h3>
             <p class="shows__card-text">The program goal is to entertain, inform, educate, & involve ...</p>
         </article>
         <article class="shows__carts-item shows-card">
-            <img src="img/shows/man-headphones.jpg" alt="A man in white headphones" class="shows__card-image">
+            <img src="img/shows/man-headphones.jpg" alt="A man in white headphones" class="shows-card__image">
             <h3 class="shows__card-title">Afropop Worldwide</h3>
             <p class="shows__card-text">Afropop Worldwide is a first-rate radio program devoted to ...</p>
         </article>
         <article class="shows__carts-item shows-card">
-            <img src="img/shows/volume-controller.jpg" alt="Volume controller" class="shows__card-image">
+            <img src="img/shows/volume-controller.jpg" alt="Volume controller" class="shows-card__image">
             <h3 class="shows__card-title">Bella's SoulFRESH</h3>
             <p class="shows__card-text">DJ Bella draws in the audience with new format music ...</p>
         </article>
         <article class="shows__carts-item shows-card">
-            <img src="img/shows/chameleon.jpg" alt="Chameleon" class="shows__card-image">
+            <img src="img/shows/chameleon.jpg" alt="Chameleon" class="shows-card__image">
             <h3 class="shows__card-title">Funky Boombox</h3>
             <p class="shows__card-text">The Funky Boombox is on air from 10pm to 12am every Friday.</p>
         </article>
         <article class="shows__carts-item shows-card">
-            <img src="img/shows/two-guys.jpg" alt="Two guys" class="shows__card-image">
+            <img src="img/shows/two-guys.jpg" alt="Two guys" class="shows-card__image">
             <h3 class="shows__card-title">Jack & Joe</h3>
             <p class="shows__card-text">Fun and smart talks on the Crazy FM.</p>
         </article>
         <article class="shows__carts-item shows-card">
-            <img src="img/shows/girl-with-glasses.jpg" alt="Girl with glasses" class="shows__card-image">
+            <img src="img/shows/girl-with-glasses.jpg" alt="Girl with glasses" class="shows-card__image">
             <h3 class="shows__card-title">Crazy FM Kiss Show</h3>
             <p class="shows__card-text">Every day greatest love song hits for our listeners.</p>
         </article>
