added latest news css

--- a/partials/latest-news.partial.html
+++ b/partials/latest-news.partial.html
@@ -4,28 +4,28 @@
     </h2>
     <div class="latest-news__list container">
         <article class="latest-news__list-item product">
-            <div class="product__image-container">
+            <div>
                 <img  src="img/latest-news/lines.jpg" alt="Lines" class="product__image">
             </div>
                     <p class="product__title">Music</p>
                     <h3 class="product__text">Britney Spears Celebrates 20-Year Anniversary of '...Baby One More Time'</h3>
         </article>
         <article class="latest-news__list-item product">
-            <div class="product__image-container">
+            <div>
             <img  src="img/latest-news/girl-with-a-can.jpg" alt="Girl with a can" class="product__image">
             </div>
                 <p class="product__title">Music</p>
                 <h3 class="product__text">Christina Aguilera Features a Very Unlikely Celebrity on a Song</h3>
         </article>
         <article class="latest-news__list-item product">
-            <div class="product__image-container">
+            <div>
             <img src="img/latest-news/leaves.jpg" alt="Leaves" class="product__image">
             </div>
                 <p class="product__title">Music</p>
                 <h3 class="product__text">A Group The Chainsmokers Announces the Next Album</h3>
         </article>
     </div>
-    <div class="latest-news__button container">
+    <div class="latest-news__button">
         <a href="#" class="latest-news__button-link">More news</a>
     </div>
 </section>
