--- a/css/latest-news.css
+++ b/css/latest-news.css
@@ -15,87 +15,74 @@
     padding: 0;
 }
 
-@media (min-widht:1000px) {
-    .latest-news__item .product {
-        display: grid;
-        gap: 15px ;
-    }
-    
-}
-.latest-news__item .product {
-    display: grid;
-    grid-template-columns: auto;
-    color: var(--ui-light-shade-color);
-    margin-top: 40px;
-    gap: 24px;
-}
-
-  .product__image-container {
-    background-size: cover;
-    position: relative;
+.latest-news__list-item product {
+    padding: 15px 15px 15px 15px;
     box-sizing: border-box;
-    object-fit: cover;
-    overflow: hidden;
+    display: block;
+
 }
 
-.product__image { 
+.product__image {
+    object-position: 50% 0%;
+    width: auto;
     height: auto;
-    display: block;
+    object-fit: cover;
+    min-height: 140px;
 }
+
 
 .product__title {
-    padding: 10px 0px;
-    margin-top: 15px;
-    color: var(--second-hover-color);
+    font-family: 'Montserrat', sans-serif;
     text-align: left;
-    background-color: black;
-    font-weight: 400;
-    width: 600px;
-    height: 28px;
+    padding: 10px 0;
+    margin-top: 15px;
     box-sizing: border-box;
+    display: block;
+    font-size: 14px;
+    font-weight: 400px;
+    color: var(--ui-dark-accent-color);
+    width: auto;
+    height: auto;
 }
 
 .product__text {
-    padding: 10px 0px;
-    color: var(--ui-light-shade-color);
+    font-family: 'Montserrat', sans-serif;
     text-align: left;
-    background-color: black;
-    font-weight: 600;
-    width: 600px;
-    height: 64px;
+    font-weight: 600px;
+    font-size: 22px;
+    display: block;
     box-sizing: border-box;
+    overflow-wrap: break-word;
+    height: auto;
+    width: auto;
+    color: ;
 }
 
-.latest-news__button container {
-    display: block;
+.latest-news__button {
     display: flex;
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
-    margin-left: 32px;
-    margin-right: 32px;
-    padding-left: 15px;
-    padding-right: 15px;
-    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin: 35px 0;
 }
 
 .latest-news__button-link {
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
-    font-size: 12px;
-    text-align: center;
+    width: 130px;
+    font: 12px 'Montserrat', sans-serif;
+    padding: 12px 24px;
+    color: gray;
     text-decoration: none;
-    position: relative;
-    max-width: 100%;
-    cursor: pointer;
-    color: var(--second-hover-color);
-    font-weight: 500;
     border-radius: 28px;
-    padding: 5px 15px;
+    display: inline-block;
+    cursor: pointer;
+    border: 1px solid gray;
+    text-align: center;
 }
 
-.latest-news-button-link:hover {
-    text-decoration-color: var(--brend-color-gradient);
+.latest-news__button-link:hover {
+    background-color: var(--brend-color-gradient);
+    color: #ffffff;
 }
+
+
+
+
