--- a/css/header.css
+++ b/css/header.css
@@ -36,6 +36,11 @@
     background-color: var(--ui-light-shade-color);
     transition: all 0.5s ease-in-out;    
 }
+
+.header__nav-line {
+    transform: scale(1);
+}
+
 .header__nav-line::before,
 .header__nav-line::after {
     content: '';
@@ -89,7 +94,6 @@
     .header__nav-menu {
         display: flex;
     }
-
 }
 
 .header__frequency {
