added js latest news clock

--- a/partials/latest-news.partial.html
+++ b/partials/latest-news.partial.html
@@ -2,6 +2,7 @@
     <h2 class="latest-news__title container">
         Latest News
     </h2>
+        <a href="#" class="latest-news__clock"></a>
     <div class="latest-news__list container">
         <article class="latest-news__list-item product">
             <div>
