--- a/partials/latest-news.partial.html
+++ b/partials/latest-news.partial.html
@@ -3,22 +3,22 @@
         Latest News
     </h2>
         <a href="#" class="latest-news__clock"></a>
-    <div class="latest-news__list container">
-        <article class="latest-news__list-item product">
+    <div class="latest-news__cards">
+        <article class="latest-news__cards-item product">
             <div>
                 <img  src="img/latest-news/lines.jpg" alt="Lines" class="product__image">
             </div>
                     <p class="product__title">Music</p>
                     <h3 class="product__text">Britney Spears Celebrates 20-Year Anniversary of '...Baby One More Time'</h3>
         </article>
-        <article class="latest-news__list-item product">
+        <article class="latest-news__cards-item product">
             <div>
             <img  src="img/latest-news/girl-with-a-can.jpg" alt="Girl with a can" class="product__image">
             </div>
                 <p class="product__title">Music</p>
                 <h3 class="product__text">Christina Aguilera Features a Very Unlikely Celebrity on a Song</h3>
         </article>
-        <article class="latest-news__list-item product">
+        <article class="latest-news__cards-item product">
             <div>
             <img src="img/latest-news/leaves.jpg" alt="Leaves" class="product__image">
             </div>
