--- a/partials/latest-news.partial.html
+++ b/partials/latest-news.partial.html
@@ -5,25 +5,31 @@
         <a href="#" class="latest-news__clock"></a>
     <div class="latest-news__cards">
         <article class="latest-news__cards-item product">
-            <div>
+            <div class="product__image-container">
                 <img  src="img/latest-news/lines.jpg" alt="Lines" class="product__image">
             </div>
-                    <p class="product__title">Music</p>
-                    <h3 class="product__text">Britney Spears Celebrates 20-Year Anniversary of '...Baby One More Time'</h3>
+            <div class="product__category">
+                <p class="product__title">Music</p>
+                <h3 class="product__text">Britney Spears Celebrates 20-Year Anniversary of '...Baby One More Time'</h3>
+             </div>
         </article>
         <article class="latest-news__cards-item product">
-            <div>
+            <div class="product__image-container">
             <img  src="img/latest-news/girl-with-a-can.jpg" alt="Girl with a can" class="product__image">
             </div>
+            <div class="product__category">
                 <p class="product__title">Music</p>
                 <h3 class="product__text">Christina Aguilera Features a Very Unlikely Celebrity on a Song</h3>
+            </div>
         </article>
         <article class="latest-news__cards-item product">
-            <div>
+            <div class="product__image-container">
             <img src="img/latest-news/leaves.jpg" alt="Leaves" class="product__image">
             </div>
+            <div class="product__category">
                 <p class="product__title">Music</p>
                 <h3 class="product__text">A Group The Chainsmokers Announces the Next Album</h3>
+            </div>
         </article>
     </div>
     <div class="latest-news__button">
