add my partial and css

--- a/css/global.css
+++ b/css/global.css
@@ -11,6 +11,7 @@
   --brend-color-gradient: #2fddf5;
   --ui-dark-accent-color: #838383;
   --ui-dark-shade-color: #000;
+  --ui-dark-gray: #363636;
   --ui-light-shade-color: #fff;
   --first-hover-color: #13bde3;
   --second-hover-color: #e6e6e6;
