Fixed file of header

--- a/partials/header.partial.html
+++ b/partials/header.partial.html
@@ -1,76 +1,79 @@
 <header class="header">
-    <div class="header__content container">
+  <div class="header__menu container">
+    <div class="header__logo">
+      <a href="#" class="header__logo-link">
+        <img
+          class="header__logo-img"
+          src="https://res2.weblium.site/res/5c94ea26a5effb00255a843a/5c987bdaa70bb800248d418d_optimized.webp"
+          alt="Logo"
+        />
+      </a>
+    </div>
+    <div class="header__nav-burger">
+      <span class="header__nav-line"></span>
+    </div>
+  </div>
+  <div class="header__nav-wrapper">
+    <div class="header__nav container">
+      <nav class="header__nav-menu">
+        <ul class="header__nav-list">
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#">Shows</a>
+          </li>
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#">Schedule</a>
+          </li>
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#">Podcasts</a>
+          </li>
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#">News</a>
+          </li>
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#">About Crazy FM</a>
+          </li>
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header__content">
         <div class="header__frequency">
-            <span>102.7 FM</span>
+          <span>102.7 FM</span>
         </div>
         <div class="header__social-icons">
-            <ul class="header__social-list">
-                <li class="header__social-item">
-                    <a href="#" class="header__social-link">
-                        <svg class="header__social-icon">
-                            <use href="img/svg/fb-icon.svg#fb-icon"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="header__social-item">
-                    <a href="#" class="header__social-link">
-                        <svg class="header__social-icon">
-                            <use href="img/svg/tw-icon.svg#tw-icon"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="header__social-item">
-                    <a href="#" class="header__social-link">
-                        <svg class="header__social-icon">
-                            <use href="img/svg/ig-icon.svg#ig-icon"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="header__social-item">
-                    <a href="#" class="header__social-link">
-                        <svg class="header__social-icon">
-                            <use href="img/svg/yt-icon.svg#yt-icon"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
+          <ul class="header__social-list">
+            <li class="header__social-item">
+              <a href="#" class="header__social-link">
+                <svg class="header__social-icon">
+                  <use href="img/svg/fb-icon.svg#fb-icon"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="header__social-item">
+              <a href="#" class="header__social-link">
+                <svg class="header__social-icon">
+                  <use href="img/svg/tw-icon.svg#tw-icon"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="header__social-item">
+              <a href="#" class="header__social-link">
+                <svg class="header__social-icon">
+                  <use href="img/svg/ig-icon.svg#ig-icon"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="header__social-item">
+              <a href="#" class="header__social-link">
+                <svg class="header__social-icon">
+                  <use href="img/svg/yt-icon.svg#yt-icon"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
+      </div>
     </div>
-    <div class="header__menu container">
-        <div class="header__logo">
-            <a href="#" class="header__logo-link">
-                <img class="header__logo-img"
-                    src="https://res2.weblium.site/res/5c94ea26a5effb00255a843a/5c987bdaa70bb800248d418d_optimized.webp"
-                    alt="Logo">
-            </a>
-        </div>
-        <div class="header__nav">
-            <div class="header__nav-burger">
-                <span class="header__nav-line"></span>
-            </div>
-            <nav class="header__nav-menu">
-                <ul class="header__nav-list">
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="#">Shows</a>
-                    </li>
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="#">Schedule</a>
-                    </li>
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="#">Podcasts</a>
-                    </li>
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="#">News</a>
-                    </li>
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="#">About Crazy FM</a>
-                    </li>
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="#">Contacts</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </div>
-
+  </div>
 </header>
