--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,4 @@
-.header {
+.header {    
     background-color: var(--ui-dark-shade-color);
     padding: 15px 25px;
 }
@@ -8,8 +8,14 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 0;
+    padding-right: 10px;
+    margin-bottom: 20px;
 
+}
+
+.header__logo {
+    position: relative;
+    z-index: 15;
 }
 
 .header__logo-img {
@@ -68,9 +74,22 @@
     transform: rotate(45deg);
 }
 
-.header__nav-menu,
-.header__content {
-    display: none;
+.header__nav-wrapper {
+    position: fixed;
+    top: -1000px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--ui-dark-shade-color);
+    z-index: 2;
+    transition: top 0.3s ease-in 0.1s;
+    overflow: hidden;
+    margin: auto;
+    padding-top: 150px;
+}
+
+.header__nav-wrapper.active {
+    top: 0;
 }
 
 .header__social-icon {
@@ -86,70 +105,106 @@
     cursor: pointer;
 }
 
-.header__social-list,
-.header__nav-list {
+.header__nav-item {
+    padding: 5px 10px;
+}
+
+.header__nav-item,
+.header__social-item {
     list-style: none;
 }
 
-@media (min-width: 992px) {
-    .header__nav-burger {
-        display: none;
-    }
-
-    .header__content {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .header__menu {
-        margin-top: 20px;
-    }
-
-    .header__nav-menu {
-        display: flex;
-    }
+.header__nav-link {
+    font-size: 16px;
+    font-weight: 500;
+    text-decoration: none;
+    color: var(--ui-light-shade-color);
 }
 
 .header__frequency {
     color: var(--ui-light-shade-color);
     font-weight: 500;
     font-size: 16px;
+    padding: 20px 0 20px 0;
 }
 
 .header__social-list {
     display: flex;
-    padding: 0 12px;
-    gap: 12px;
+    justify-content: center;
+    gap: 15px;
+    padding-top: 10px;
+
 }
 
-.header__nav-link {
-    font-weight: 500;
-    font-size: 16px;
-    text-decoration: none;
-    color: var(--ui-light-shade-color)
-}
-
-.header__nav-link:hover {
-    color: var(--first-hover-color);
-    cursor: pointer;
-}
-
-.header__nav-menu {
-    width: 550px;
-    padding-right: 40px;
-    margin-right: 30px;
-}
-
-.header__nav-list {
+.header__nav,
+.header__content {
+    position: relative;
+    z-index: 9;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 20px;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 0;
+}
+
+@media (min-width: 992px) {
+
+    .header__nav-wrapper {
+        position: absolute;
+        top: 0;
+        transition: none;
+        height: 0;        
+        padding-bottom: 20px;
+    }
+
+    .header__nav-burger {
+        display: none;
+    }
+
+    .header__logo {
+        position: relative;
+        top: 50px;
+    }
+
+    .header__nav {
+        height: 0;
+        padding-bottom: 20px;
+    }
+
+    .header__nav-menu {
+        position: relative;
+        top: -60px;
+        right: -175px;
+    }
+
+    .header__content {
+        position: relative;
+        top: -220px;
+        flex-direction: row;
+        justify-content: space-between;
+        min-width: 100%;
+        padding: 0 30px;
+    }
+
+    .header__nav-list {
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        width: 600px;
+    }
 }
 
 @media (min-width: 1066px) {
-    .header__nav-menu {
-        padding-right: 0;
-        margin-right: 0;
+    .header__logo {
+        top: 35px;
+    }
+
+    .header__content {
+        top: -180px;
+    }
+
+    .header__nav-list {
+        width: 100%;
+        flex-wrap: nowrap;
     }
 }
