--- a/css/win.css
+++ b/css/win.css
@@ -23,6 +23,7 @@
     margin-bottom: 10px;
     color: var(--ui-light-shade-color);
 }
+
 .prize__info-content {
     margin-top: 40px;
 }
@@ -55,8 +56,25 @@
     color: var(--ui-dark-accent-color);
 }
 
-@media (min-width: 768px) {
+@media (max-width: 767px) {
     .prize__advert-content {
-        width: 58%;
+        width: 100%;
+        padding: 0 10px;
+    }
+    
+    .prize__title {
+        font-size: 28px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+    .prize__advert-content {
+        width: 70%;
+    }
+}
+
+@media (min-width: 1024px) {
+    .prize__advert-content {
+        width: 58%; 
     }
 }
