--- a/css/global.css
+++ b/css/global.css
@@ -16,6 +16,7 @@
   --first-hover-color: #13bde3;
   --second-hover-color: #e6e6e6;
   --cards-background-color: #1ea9f1;
+  --ui-text-size-mobile: 16px;
   font-family: "Montserrat", sans-serif;
   scroll-behavior: smooth;
 }
