--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,7 @@
 .header {
+    display: block;
     background-color: var(--ui-dark-shade-color);
-    padding: 15px 25px;
+    padding: 20px;
 }
 
 .header__menu {
@@ -8,9 +9,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-right: 10px;
-    margin-bottom: 20px;
-
+    /* padding-right: 10px;
+    margin-bottom: 20px; */
 }
 
 .header__logo {
@@ -27,9 +27,9 @@
     display: block;
     z-index: 5;
     width: 24px;
-    height: 20px;
+    height: 16px;
     cursor: pointer;
-    padding: 12px;
+    padding: 7px;
 }
 
 .header__nav-burger span,
@@ -82,7 +82,7 @@
     height: 100%;
     background-color: var(--ui-dark-shade-color);
     z-index: 2;
-    transition: top 0.3s ease-in 0.1s;
+    /* transition: top 0.5s ease-in 0.1s; */
     overflow: hidden;
     margin: auto;
     padding-top: 150px;
@@ -138,7 +138,6 @@
     justify-content: center;
     gap: 15px;
     padding-top: 10px;
-
 }
 
 .header__nav,
@@ -153,6 +152,9 @@
 }
 
 @media (min-width: 992px) {
+    .header__nav-burger {
+        display: none;
+    }
 
     .header__nav-wrapper {
         position: absolute;
@@ -160,10 +162,6 @@
         transition: none;
         height: 0;
         padding-bottom: 20px;
-    }
-
-    .header__nav-burger {
-        display: none;
     }
 
     .header__logo {
