--- a/css/header.css
+++ b/css/header.css
@@ -76,7 +76,7 @@
 
 .header__nav-wrapper {
     position: fixed;
-    top: -1000px;
+    top: -100%;
     left: 0;
     width: 100%;
     height: 100%;
