redact my win and career blocks

--- a/css/win.css
+++ b/css/win.css
@@ -1,5 +1,4 @@
 .prize {
-    background: url("../img/win/pattern.webp") no-repeat center #000000;
     display: flex;
     align-items: center;
     position: relative;
@@ -8,7 +7,14 @@
 }
 
 .prize__logo {
-   display: inline-block;
+    background: url("../img/win/pattern.webp") no-repeat center #000000;
+    filter: brightness(62.5%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
 }
 
 .prize__advert{
@@ -75,6 +81,6 @@
 
 @media (min-width: 1024px) {
     .prize__advert-content {
-        width: 58%; 
+        width: 57%; 
     }
 }
