--- a/partials/careers.partial.html
+++ b/partials/careers.partial.html
@@ -1,15 +1,17 @@
 <section class="career">
     <div class="career__logo"></div>
-    <div class="career__content">
-        <p class="career__intro">
-            CAREERS
-        </p>
-        <h2 class="career__title">
-            <b>Want to Work With Us?</b>
-        </h2>
-        <p class="career__info">
-            If you are interested in joining our team and make a prospective career with lots of work and life benefits, you're in the right place. We are looking for young and talented enthusiasts.
-        </p>
-        <a class="career__button" href="#">See Job Openings</a>
+    <div class="career__content_advert">
+        <div class="career__content">
+            <p class="career__intro">
+                CAREERS
+            </p>
+            <h2 class="career__title">
+                Want to Work With Us?
+            </h2>
+            <p class="career__info">
+                If you are interested in joining our team and make a prospective career with lots of work and life benefits, you're in the right place. We are looking for young and talented enthusiasts.
+            </p>
+            <a class="career__button" href="#">See Job Openings</a>
+        </div>
     </div>
 </section>
