--- a/css/careers.css
+++ b/css/careers.css
@@ -1,6 +1,7 @@
 .career {
     position: relative;
     padding: 100px 0;
+    background: rgba(0, 0, 0, 0.5);
 }
 
 .career__logo {
@@ -13,10 +14,16 @@
     z-index: -1;
 }
 
-.career__content {
-    margin: 75px 15%;
-    padding: 2rem;
+
+.career__content_advert {
+    margin: 0 auto;
     max-width: 1200px;
+    padding: 0 15px;
+}
+
+.career__content {
+    padding: 35px 30px;
+    width: 55%;
     background: var(--ui-light-shade-color);
 }
 
@@ -26,9 +33,10 @@
 }
 
 .career__title {
-    font: 38px 'Montserrat', sans-serif;
+    font-weight: 700;
+    font: 34px 'Montserrat', sans-serif;
     color: var(--ui-dark-shade-color);
-    margin: 10px 0;
+    margin: 15px 0;
 }
 
 .career__info {
@@ -54,12 +62,16 @@
 
 @media (min-width: 768px) {
     .career__content {
+        padding-top: 40px;
+        padding-bottom: 40px;
         width: 50%;
     }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 992px) {
     .career__content {
+        padding-top: 50px;
+        padding-bottom: 50px;
         width: 40%;
     }
 }
