added news html and news css

--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@
 @import url(shows.css);
 @import url(header.css);
 @import url(latest-news.css);
+@import url(news.css);
 @import url(follow-us.css);
 @import url(footer.css);
 @import url(crazy-fm.css);
