--- a/partials/latest-news.partial.html
+++ b/partials/latest-news.partial.html
@@ -33,6 +33,6 @@
         </article>
     </div>
     <div class="latest-news__button">
-        <a href="#" class="latest-news__button-link">More news</a>
+        <a href="news.html" class="latest-news__button-link">More news</a>
     </div>
 </section>
