--- a/css/about-us.css
+++ b/css/about-us.css
@@ -13,17 +13,35 @@
 .about-crazy-fm__title {
     color: var(--ui-light-shade-color);
     text-align: center;
+    word-wrap: break-word;
+    font-size: 30px;
     margin-top: 30px;
+    letter-spacing: calc(var(--ui-block-title-mobile-letter-spacing));
 }
 
 .about-crazy-fm__description {
     color: var(--ui-dark-accent-color);
     position: relative;
-    text-align: center;
+    text-align: left;
+    padding: 20px;
     box-sizing: border-box;
-    margin-top: 25px;
+    margin-top: 20px;
     word-wrap: break-word;
 }
+
+.about-crazy-fm__button {
+    font: 12px 'Montserrat', sans-serif;
+    padding: 12px 24px;
+    color: var(--ui-light-shade-color);
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 28px;
+    line-height: 20.04px;
+    cursor: pointer;
+    border: 1px solid var(--ui-light-shade-color);
+    transition: background-color 0.3s, color 0.3s;
+    box-shadow: 0 10px 36px 1.1px var(--ui-dark-gray);
+}    
 
 @media (min-width: 272px) {
     .about-crazy-fm__logo {
@@ -37,5 +55,11 @@
         font-size: var(--ui-text-size-mobile);
         line-height: 1.5;
         letter-spacing: 0;
+    }
+}
+
+@media (max-width: 767px) {
+    .about-crazy-fm__title {
+        line-height: 1.3;
     }
 }
