--- a/partials/win.partial.html
+++ b/partials/win.partial.html
@@ -2,7 +2,7 @@
     <div class="prize__logo"></div>
     <div class="prize__advert">
         <div class="prize__advert-content">
-            <h2 class="prize__title">
+            <h2 class="prize__title" id="runText">
                 <b>Win $15,000 Worth of Equipment with McDonald's Community Football</b>
             </h2>
             <div class="prize__info-content">
